odstranenie ui elementu odpovedi po uspesnom odstraneni odpovedi z aplikacie, refaktoring question detail activity a viewmodelu, dalsie mensie upravy

--- a/app/src/main/res/layout/question_detail.xml
+++ b/app/src/main/res/layout/question_detail.xml
@@ -106,13 +106,12 @@
                 android:id="@+id/answersListRecycler"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_PaddingTop="15dp"
+                android:paddingBottom="80dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/answersCountTV"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toBottomOf="@+id/answersCountTV" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
