funkcne pridavanie tagov pri pridavani otazky

--- a/app/src/main/res/layout/question_detail.xml
+++ b/app/src/main/res/layout/question_detail.xml
@@ -106,7 +106,7 @@
                 android:id="@+id/answersListRecycler"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_PaddingTop="15dp"
+                android:paddingTop="15dp"
                 android:paddingBottom="80dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
