--- a/app/src/main/res/layout/deletable_tag_item.xml
+++ b/app/src/main/res/layout/deletable_tag_item.xml
@@ -5,16 +5,23 @@
     android:layout_height="wrap_content"
     android:layout_marginRight="10dp"
     android:layout_marginBottom="5dp"
+    android:paddingHorizontal="8dp"
+    android:paddingVertical="2dp"
     android:background="#5F8EF1"
+    android:orientation="horizontal"
     >
 
     <TextView
         android:id="@+id/tagNameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="8dp"
-        android:layout_marginVertical="2dp"
         android:text="Tag name"
+        android:textColor="@android:color/white" />
+    <TextView
+        android:id="@+id/closeText"
+        android:layout_width="30dp"
+        android:layout_height="wrap_content"
+        android:text="X"
         android:textColor="@android:color/white"
-        />
+        android:textAlignment="center"/>
 </LinearLayout>
