--- a/app/src/main/res/layout/question_form.xml
+++ b/app/src/main/res/layout/question_form.xml
@@ -37,8 +37,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:ems="10"
-            android:inputType="textPersonName" />
-
+            android:inputType="text"
+            android:maxLength="256" />
 
         <TextView
             android:id="@+id/titleErrorMessageText"
@@ -63,7 +63,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:inputType="textMultiLine"
+            android:maxLines="20"
+            android:scrollHorizontally="false"/>
 
         <TextView
             android:id="@+id/bodyErrorMessageText"
@@ -97,11 +99,33 @@
             android:nestedScrollingEnabled="false"
             />
 
+        <TextView
+            android:id="@+id/tagsLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:text="Tagy"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <AutoCompleteTextView
+            android:id="@+id/tagsAutoCompleteTextView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:completionThreshold="1"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/tagsRecyclerView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:nestedScrollingEnabled="false"
+            />
+
         <Button
             android:id="@+id/askButton"
             android:background="@color/colorPrimary"
             android:textColor="@android:color/white"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             android:paddingVertical="30dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
