--- a/app/src/main/res/layout/answer_edit.xml
+++ b/app/src/main/res/layout/answer_edit.xml
@@ -39,7 +39,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:inputType="textMultiLine"
+            android:maxLines="20"
+            android:scrollHorizontally="false" />
         <TextView
             android:id="@+id/bodyErrorMessageText"
             android:layout_width="wrap_content"
