--- a/app/src/main/res/layout/answer_edit.xml
+++ b/app/src/main/res/layout/answer_edit.xml
@@ -33,7 +33,11 @@
             android:text="Obsah *"
             android:textStyle="bold"
             android:textSize="16sp" />
-
+        <TextView
+            android:id="@+id/contentHelp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Odpovedajte prosím slušne a vecne"/>
         <EditText
             android:id="@+id/answerBodyEditText"
             android:layout_width="match_parent"
