--- a/app/src/main/res/layout/answer_form.xml
+++ b/app/src/main/res/layout/answer_form.xml
@@ -33,7 +33,11 @@
             android:text="Obsah *"
             android:textSize="16sp"
             android:textStyle="bold" />
-
+        <TextView
+            android:id="@+id/contentHelp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Odpovedajte prosím slušne a vecne"/>
         <EditText
             android:id="@+id/editTextAnswerBody"
             android:layout_width="match_parent"
@@ -58,7 +62,11 @@
             android:text="Obrázky"
             android:textSize="16sp"
             android:textStyle="bold" />
-
+        <TextView
+            android:id="@+id/imagesHelp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ak je to potrebné, priložte k odpovedi aj obrázky"/>
         <Button
             android:id="@+id/selectImageBtn2"
             android:layout_width="match_parent"
