--- a/app/src/main/res/layout/question_form.xml
+++ b/app/src/main/res/layout/question_form.xml
@@ -31,7 +31,11 @@
             android:text="Nadpis *"
             android:textStyle="bold"
             android:textSize="16sp" />
-
+        <TextView
+            android:id="@+id/titleHelp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Buďte čo najviac špecifický (max. 255 znakov)"/>
         <EditText
             android:id="@+id/editTextQuestionTitle"
             android:layout_width="match_parent"
@@ -57,7 +61,11 @@
             android:textSize="16sp"
             android:textStyle="bold"
             />
-
+        <TextView
+            android:id="@+id/contentHelp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Uveďte všetky informácie potrebné k zodpovedaniu otázky"/>
         <EditText
             android:id="@+id/editTextQuestionBody"
             android:layout_width="match_parent"
@@ -83,7 +91,11 @@
             android:text="Obrázky"
             android:textSize="16sp"
             android:textStyle="bold" />
-
+        <TextView
+            android:id="@+id/imagesHelp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ak je to potrebné, priložte k otázke aj obrázky"/>
         <Button
             android:id="@+id/selectImageBtn"
             android:layout_width="match_parent"
@@ -107,7 +119,11 @@
             android:text="Tagy"
             android:textSize="16sp"
             android:textStyle="bold" />
-
+        <TextView
+            android:id="@+id/tagsHelp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Uveďte tagy, ktoré opisujú o čom je Vaša otázka"/>
         <AutoCompleteTextView
             android:id="@+id/tagsAutoCompleteTextView"
             android:layout_width="match_parent"
